--- a/css/queries.css
+++ b/css/queries.css
@@ -16,6 +16,7 @@
   .gallery {
     grid-template-columns: repeat(2, 1fr);
   }
+
 }
 
 /**************************/
@@ -56,6 +57,7 @@
   .testimonials-container {
     padding: 9.6rem 3.2rem;
   }
+
 }
 
 /**************************/
@@ -216,10 +218,24 @@
     grid-column: span 3;
   }
 
+  .section-how{
+    padding: 8rem 0 4.8rem 0;
+  }
+  
+  .section-meals{
+    padding: 4.8rem 0;
+  }
+
   .nav-col {
     grid-row: 1;
     grid-column: span 2;
     margin-bottom: 3.2rem;
+  }
+
+  .logos{
+    gap:15px;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
@@ -256,10 +272,6 @@
     width: 80%;
   }
 
-  .logos img {
-    height: 1.2rem;
-  }
-
   .step-img-box:nth-child(2) {
     grid-row: 1;
   }
@@ -292,6 +304,12 @@
   .cta-img-box {
     height: 32rem;
     grid-row: 1;
+  }
+}
+
+@media (max-width: 22em) {
+  .hero-buttons{
+    flex-direction: column;
   }
 }
 
